<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Файловый Менеджер</string>

    <!-- Actions -->
    <string name="action_new_folder">Новая папка</string>
    <string name="action_new_file">Новый файл</string>
    <string name="action_sort">Упорядочить</string>
    <string name="action_insert">Вставить</string>
    <string name="action_update">Обновить</string>
    <string name="action_search">Поиск</string>

    <!-- Texts -->
    <string name="error">Ошибка</string>
    <string name="empty_list">Пусто</string>
    <string name="no_app">Не найденно подходящей программы для открытия этого файла.</string>
    <string name="file_cannot_delete">Не удалось удалить файл</string>
    <string name="file_cannot_rename">Не удалось переименовать файл</string>

    <string name="ok">OK</string>

    <string name="enter_new_name">Введите новое имя:</string>
    <string name="enter_file_name">Введите имя нового файла:</string>
    <string name="enter_directory_name">Введите имя новой папки:</string>
    <string name="new_name">Новое имя</string>
    <string name="file_name">Имя файла</string>
    <string name="directory_name">Имя папки</string>

    <!-- File order -->
    <string-array name="file_orders">
        <item>По алфавиту (а-я)</item>
        <item>По алфавиту (я-а)</item>
        <item>По размеру (от меньшего к большему)</item>
        <item>По размеру (от большего к меньшему)</item>
        <item>По дате последнего изменения</item>
    </string-array>

    <!-- Context dialog -->
    <string name="open">Открыть</string>
    <string name="copy">Копировать</string>
    <string name="move">Переместить</string>
    <string name="rename">Переименовать</string>
    <string name="remove">Удалить</string>

    <string-array name="file_dialog_actions">
        <item>Открыть</item>
        <item>Копировать</item>
        <item>Переместить</item>
        <item>Переименовать</item>
        <item>Удалить</item>
    </string-array>

    <string-array name="file_size_units">
        <item>б</item>
        <item>кб</item>
        <item>мб</item>
        <item>гб</item>
        <item>тб</item>
        <item>пб</item>
        <item>эб</item>
    </string-array>

    <plurals name="file_count">
        <item quantity="zero">Нет файлов</item>
        <item quantity="one">1 файл</item>
        <item quantity="other">%d файлов</item>
    </plurals>

    <string name="root.directory.title">Корневая папка</string>

    <!-- File source screen -->
    <string name="file.source.title">Категории</string>
    <string name="file.source.images.title">Изображения</string>
    <string name="file.source.audio.title">Аудио</string>
    <string name="file.source.video.title">Видео</string>
    <string name="file.source.storage.title">Локальное хранилище</string>
    <string name="file.source.root.title">Корневая папка (для опытных пользователей)</string>

    <!-- Permissions -->
    <string name="permission.storage.rationale">Вам нужно разрешить приложению доступ к внутренему хранилищу для корректной работы</string>
    <string name="permission.allow">Разрешить</string>

    <!-- File inserting -->
    <string name="file.insert.wrong.directory">Невозможно вставить в эту директорию</string>

    <!-- Errors -->
    <string name="file.action.not.allowed">Вы не можете выполнить эту операцию здесь</string>

</resources>
