<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <!--<item-->
        <!--android:id="@+id/action_update"-->
        <!--android:title="@string/action_update"-->
        <!--android:icon="@drawable/ic_update"-->
        <!--app:showAsAction="always"/>-->

    <item
        android:id="@+id/action_new_folder"
        android:title="@string/action_new_folder"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_new_file"
        android:title="@string/action_new_file"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_sort"
        android:title="@string/action_sort"
        app:showAsAction="never"/>
</menu>
